@@ -75,7 +75,7 @@ public class ParsingI2CMessageState extends AbstractState {
     }
 
     private static byte[] convertI2CBuffer(byte[] byteBuffer) {
-        int outSize = new Double(Math.floor(byteBuffer.length / 2)).intValue();
+        int outSize = Double.valueOf(Math.floor(byteBuffer.length / 2)).intValue();
         byte[] outBuffer = new byte[outSize];
         int outIndex = 0;
         for (int index = 0; index < byteBuffer.length; index = index + 2) {
